deploy/compute.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compute-deployment
  labels:
    app: compute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute
  template:
    metadata:
      labels:
        app: compute
    spec:
      containers:
        - name: compute
          image: tb-compute:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "2048Mi"
              cpu: "750m"
---
apiVersion: v1
kind: Service
metadata:
  name: compute-service
spec:
  selector:
    app: compute
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30003
