deploy/neo4j.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j-deployment
  labels:
    app: neo4j
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-claim
      containers:
        - name: neo4j
          image: neo4j:latest
          ports:
            - containerPort: 7474
            - containerPort: 7687
          resources:
            limits:
              memory: "1Gi"
              cpu: "250m"
          volumeMounts:
            - mountPath: "/data"
              name: db-storage
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-service
spec:
  selector:
    app: neo4j
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 7474
      targetPort: 7474
